@@ -1,7 +1,6 @@
 package nl.bertriksikken.senscom;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 
@@ -34,7 +33,7 @@ public final class SensComMessage {
     }
 
     public List<SensComItem> getItems() {
-        return Collections.unmodifiableList(items);
+        return List.copyOf(items);
     }
 
     @Override
