@@ -1,7 +1,6 @@
 package nl.bertriksikken.ttnv3.enddevice;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 
@@ -13,7 +12,7 @@ public final class EndDevices {
     private final List<EndDevice> endDevices = new ArrayList<>();
 
     public List<EndDevice> getEndDevices() {
-        return Collections.unmodifiableList(endDevices);
+        return List.copyOf(endDevices);
     }
 
     @Override
